cluster/bedrock/monitoring/prometheus-stack/templates/network.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure-private
  routes:
    - match: Host(`grafana.colfax.int`)
      kind: Rule
      middlewares:
        - name: lan-only
          namespace: traefik-private
        - name: secure-headers
          namespace: traefik-private
      services:
        - name: prometheusstack-grafana
          port: 80
  tls:
    secretName: private-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure-private
  routes:
    - match: Host(`prometheus.colfax.int`)
      kind: Rule
      middlewares:
        - name: lan-only
          namespace: traefik-private
        - name: secure-headers
          namespace: traefik-private
      services:
        - name: prometheusstack-kube-prome-prometheus
          port: 9090
  tls:
    secretName: private-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure-private
  routes:
    - match: Host(`alertmanager.colfax.int`)
      kind: Rule
      middlewares:
        - name: lan-only
          namespace: traefik-private
        - name: secure-headers
          namespace: traefik-private
      services:
        - name: prometheusstack-kube-prome-alertmanager
          port: 9093
  tls:
    secretName: private-tls
